--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,13 @@
+html{
+    overflow-x: hidden;
+}
+html::-webkit-scrollbar{
+    width: 1.4rem;
+}
 body {
     background-color: rgb(20, 20, 51);
     color: antiquewhite;
+    overflow-x: hidden;
 }
 #main {
     height: 100vh;
